--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <li> Wednesday, April 24, 2024</li>
             <li> Mehndi ( Henna ) - 5:00 pm</li>
             <li> 5875 34B Avenue, Ladner, Delta, BC <br>
-              <a class="google" href="https://maps.app.goo.gl/WLLLbN1ic52n5fX99" target="_blank" rel="noopener"> Google Maps </a> </li> 
+              <a class="google" href="https://maps.app.goo.gl/WLLLbN1ic52n5fX99" target="_blank" rel="noopener"> <img src="images/Google-Maps-logo (1).png" alt="googlem  maps" width="80px" class="maps"> </a> </li> 
             
             <li> Dress Code: Semi Casual</li>
         </ul>
@@ -290,7 +290,7 @@
                 <li> Friday, April 26, 2024</li>
                 <li> The Wedding - 12:00 pm</li>
                 <li> 5875 34B Avenue, Ladner, Delta, BC  <br>
-                 <a  class="google" href="https://maps.app.goo.gl/WLLLbN1ic52n5fX99" target="_blank" rel="noopener"> Google Maps </a>  </li>
+                 <a  class="google" href="https://maps.app.goo.gl/WLLLbN1ic52n5fX99" target="_blank" rel="noopener"><img src="images/Google-Maps-logo (1).png" alt="googlem  maps" width="80px" class="maps"> </a>  </li>
                 <li> Dress Code: Semi Casual<br>
                   Please try to avoid color Red 
                 </li>
@@ -316,7 +316,7 @@
                     <li> Saturday, April 27, 2024</li>
                     <li> The Reception - 6:00 pm</li>
                     <li>  Southall Banquet Hall <br> 8273 Ross Street,Vancouver,BC <br>
-                      <a class="google" href="https://maps.app.goo.gl/2yBywK1aTE42VH918" target="_blank" rel="noopener"> Google Maps </a> </li>
+                      <a class="google" href="https://maps.app.goo.gl/2yBywK1aTE42VH918" target="_blank" rel="noopener"><img src="images/Google-Maps-logo (1).png" alt="googlem  maps" width="80px" class="maps"> </a> </li>
                     <li> Dress Code: Glam up !</li>
                 </ul>
             </div>
@@ -339,11 +339,11 @@
 </section>
 <footer class="main-footer">
 <div class="info">
-<p>Please direct all questions or inquiries at mellicaandmorgangethitched@gmail.com <br>
-&copy Moesgrafix 2024 <br> <br><br>
+<p>Please direct all questions or inquiries at mellicaandmorgangethitched@gmail.com <br> <br><span class="moesgrafix">
+&copy Moesgrafix 2024 <br> <br>
  <a href="#">back to top</a>
 </p>
-
+</span>
 
 </div>
 
