--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
     <!-- <div class="tab-one "> Function One</div> -->
 <div class="mehndi">
 <h2 class="mehndi-invite">
-    Mehndi / Henna Function
+    Mehndi  
 </h2>
-<div class="mehndi-list">
+<!-- <div class="mehndi-list">
         <ul>
             <li> Wednesday, April 24, 2024</li>
             <li> Mehndi ( Henna ) - 5:00 pm</li>
@@ -274,7 +274,7 @@
         <p class="mehndi-detail">
  A semi casual cocktail style party While women get their mehndi applied. Please feel free to come and go as desired.
  
-</p>
+</p> -->
  </section>
 
  <!-- Wedding Section  -->
@@ -285,7 +285,7 @@
     <h2 class="wedding-invite">
         The Wedding
     </h2>
-    <div class="wedding-list">
+    <!-- <div class="wedding-list">
             <ul>
                 <li> Friday, April 26, 2024</li>
                 <li> The Wedding - 12:00 pm</li>
@@ -300,7 +300,7 @@
   
     After the Groom's family is welcomed to the venue, the pundit ( indian priest ) will perform the ceremony to bind the couple's lives together. Lunch will be served afterwards. Be advised this will be a phone free ceremony. Please put it away and enjoy the moment ! On this auspicious day , no alcohol will be served.  
    
-    </p>
+    </p> -->
      </section>
 
 <!-- Reception Section  -->
@@ -309,9 +309,9 @@
         <!-- <div class="tab-three"> Function Three</div> -->
         <div class="mehndi">
         <h2 class="reception-invite">
-             The Reception
+             Reception
         </h2>
-        <div class="reception-list">
+        <!-- <div class="reception-list">
                 <ul>
                     <li> Saturday, April 27, 2024</li>
                     <li> The Reception - 6:00 pm</li>
@@ -322,7 +322,7 @@
             </div>
                 <p class="reception-detail">
                     Food , Games, Entertainment, and minimal speaches... Let's Celebrate. 
-        </p>
+        </p> -->
          </section>
 
 <section class="part-five">
