--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                  </div> -->
                 </li>
                 <li class="no-hover"><a href="https://www.myregistry.com/wedding-registry/mellica-arya-and-morgan-schmidt-burnaby-bc/4096102/giftlist" target="_blank" rel="noopener noreferrer">Registry</a></li>
-                <li class="opacity no-hover"><a href="traditions.html" target="_blank" rel="noopener noreferrer"> Indian Wedding Traditions</a></li>
+                <li class="opacity no-hover"><a href="traditions.html" 
+                  target="_blank" rel="noopener noreferrer"> Indian Wedding Traditions</a></li>
             </ul>
         </nav>
     </header>
@@ -259,22 +260,22 @@
     <!-- <div class="tab-one "> Function One</div> -->
 <div class="mehndi">
 <h2 class="mehndi-invite">
-    Mehndi  
+    Mehndi  <br> <span class="sub-head"> (Henna Party) </span>
 </h2>
-<!-- <div class="mehndi-list">
+<div class="meh-img"><img src="images/henstock.jpg" alt="wedding-rings" width="50%"></div> 
+ <div class="mehndi-list">
         <ul>
             <li> Wednesday, April 24, 2024</li>
             <li> Mehndi ( Henna ) - 5:00 pm</li>
-            <li> 5875 34B Avenue, Ladner, Delta, BC <br>
+            <li> 5875 34B Avenue, Ladner, Delta, BC <br> <br>
               <a class="google" href="https://maps.app.goo.gl/WLLLbN1ic52n5fX99" target="_blank" rel="noopener"> <img src="images/Google-Maps-logo (1).png" alt="googlem  maps" width="80px" class="maps"> </a> </li> 
             
-            <li> Dress Code: Semi Casual</li>
+            <li> Dress Code: Semi Casual</li> <br> <br>
         </ul>
-    </div>
-        <p class="mehndi-detail">
- A semi casual cocktail style party While women get their mehndi applied. Please feel free to come and go as desired.
+    </div>         <p class="mehndi-detail">
+ A semi casual cocktail style party While women get their mehndi applied. <br> Please feel free to come and go as desired.
  
-</p> -->
+</p> 
  </section>
 
  <!-- Wedding Section  -->
@@ -283,24 +284,25 @@
     <!-- <div class="tab-two "> Function Two</div> -->
     <div class="wedding">
     <h2 class="wedding-invite">
-        The Wedding
+        Shaadi <br><span class="sub-head"> (Wedding Ceremony)</span>
     </h2>
-    <!-- <div class="wedding-list">
+      <div class="wed-img"><img src="images/ringsfixed.jpg" alt="wedding-rings" width="50%"></div>  
+     <div class="wedding-list">
             <ul>
                 <li> Friday, April 26, 2024</li>
                 <li> The Wedding - 12:00 pm</li>
-                <li> 5875 34B Avenue, Ladner, Delta, BC  <br>
+                <li> 5875 34B Avenue, Ladner, Delta, BC  <br> <br>
                  <a  class="google" href="https://maps.app.goo.gl/WLLLbN1ic52n5fX99" target="_blank" rel="noopener"><img src="images/Google-Maps-logo (1).png" alt="googlem  maps" width="80px" class="maps"> </a>  </li>
                 <li> Dress Code: Semi Casual<br>
                   Please try to avoid color Red 
-                </li>
+                </li> <br>
             </ul>
         </div>
             <p class="wedding-detail">
   
     After the Groom's family is welcomed to the venue, the pundit ( indian priest ) will perform the ceremony to bind the couple's lives together. Lunch will be served afterwards. Be advised this will be a phone free ceremony. Please put it away and enjoy the moment ! On this auspicious day , no alcohol will be served.  
    
-    </p> -->
+    </p> 
      </section>
 
 <!-- Reception Section  -->
@@ -311,18 +313,19 @@
         <h2 class="reception-invite">
              Reception
         </h2>
-        <!-- <div class="reception-list">
+        <div class="rec-img"><img src="images/fooljhadifixed.jpg" alt="wedding-rings" width="50%"></div> 
+         <div class="reception-list">
                 <ul>
                     <li> Saturday, April 27, 2024</li>
                     <li> The Reception - 6:00 pm</li>
-                    <li>  Southall Banquet Hall <br> 8273 Ross Street,Vancouver,BC <br>
+                    <li>  Southall Banquet Hall <br> 8273 Ross Street,Vancouver,BC <br> <br>
                       <a class="google" href="https://maps.app.goo.gl/2yBywK1aTE42VH918" target="_blank" rel="noopener"><img src="images/Google-Maps-logo (1).png" alt="googlem  maps" width="80px" class="maps"> </a> </li>
-                    <li> Dress Code: Glam up !</li>
+                    <li> Dress Code: Glam up !</li> <br> <br>
                 </ul>
             </div>
                 <p class="reception-detail">
                     Food , Games, Entertainment, and minimal speaches... Let's Celebrate. 
-        </p> -->
+        </p> 
          </section>
 
 <section class="part-five">
