--- a/traditions.html
+++ b/traditions.html
@@ -12,8 +12,11 @@
 <body>
     
     <header class="main">
-             <img src="images/rsvp-image.jpg" alt="leafs" width ="100%">
-       </div>
+             <!-- <img src="images/rsvp-image.jpg" alt="leafs" width ="100%">  -->
+             <div class="main-heading">
+                <h1 class="slide-left"> Mellica & Morgan </h1> 
+                <h3 class="slide-right"> Are getting hitched </h3>
+            </div>
        <nav class="main-nav">
         <ul>
             <li><a href="index.html" target="_blank" rel="noopener noreferrer">Home</a>
@@ -81,14 +84,14 @@
             together.
  </p>
     </section>
-       <section class="second-section">
+       <!-- <section class="second-section">
     <div class="card-one">
         <img src="images/card1.jpg" alt="wedding card1" height="100%">
     </div>
     <div class="card-two">
         <img src="images/card2.jpg" alt="weddign card2"height="100%">
     </div>
-     </section>
+     </section> -->
    
      <footer class="main-footer">
         <div class="info">
