--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="main-heading">
             <h1 class="slide-left"> Mellica & Morgan </h1> 
-            <h3 class="slide-right"> Are getting hitched </h3>
+            <h3 class="slide-right"> Are getting married </h3>
         </div>
         <nav class="main-nav">
             <ul>
@@ -290,7 +290,7 @@
      <div class="wedding-list">
             <ul>
                 <li> Friday, April 26, 2024</li>
-                <li> The Wedding - 12:00 pm</li>
+                <li> The Wedding - 10:30 am</li>
                 <li> 5875 34B Avenue, Ladner, Delta, BC  <br> <br>
                  <a  class="google" href="https://maps.app.goo.gl/WLLLbN1ic52n5fX99" target="_blank" rel="noopener"><img src="images/Google-Maps-logo (1).png" alt="googlem  maps" width="80px" class="maps"> </a>  </li>
                 <li> Dress Code: Semi Casual<br>
