--- a/traditions.html
+++ b/traditions.html
@@ -15,7 +15,7 @@
              <!-- <img src="images/rsvp-image.jpg" alt="leafs" width ="100%">  -->
              <div class="main-heading">
                 <h1 class="slide-left"> Mellica & Morgan </h1> 
-                <h3 class="slide-right"> Are getting hitched </h3>
+                <h3 class="slide-right"> Are getting married </h3>
             </div>
        <nav class="main-nav">
         <ul>
