--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 </div> 
 
 <div class="test">
-<a href="https://www.myregistry.com/wedding-registry/mellica-arya-and-morgan-schmidt-burnaby-bc/4096102/giftlist" class="btn btn-link ">Wedding Registry </a>
+<a href="https://www.myregistry.com/wedding-registry/mellica-arya-and-morgan-schmidt-burnaby-bc/4096102/giftlist" class="btn btn-link " target="_blank" rel="noopener noreferrer" >Wedding Registry </a>
 </div>
 <!-- Mehndi Section  -->
  <section class="part-two">
