--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
  <div class="mehndi-list">
         <ul>
             <li> Wednesday, April 24, 2024</li>
-            <li> Mehndi ( Henna ) - 5:00 pm</li>
-            <li> 5875 34B Avenue, Ladner, Delta, BC <br> <br>
-              <a class="google" href="https://maps.app.goo.gl/WLLLbN1ic52n5fX99" target="_blank" rel="noopener"> <img src="images/Google-Maps-logo (1).png" alt="googlem  maps" width="80px" class="maps"> </a> </li> 
+            <li> 5:00 pm</li>
+            <li> 5875 34B Avenue, Ladner, Delta, BC 
+              <a class="google" href="https://maps.app.goo.gl/WLLLbN1ic52n5fX99" target="_blank" rel="noopener"> <img src="images/Google-Maps-logo (1).png" alt="googlem  maps" width="50px" class="maps"> </a> </li> 
             
             <li> Dress Code: Semi Casual</li> <br> <br>
         </ul>
@@ -285,16 +285,16 @@
     <div class="wedding">
     <h2 class="wedding-invite">
         Shaadi <br><span class="sub-head"> (Wedding Ceremony)</span>
-    </h2>
-      <div class="wed-img"><img src="images/ringsfixed.jpg" alt="wedding-rings" width="50%"></div>  
+    </h2> <br> 
+      <div class="wed-img"><img src="images/knotfxed.jpg" alt="wedding-rings" width="50%"></div>  
      <div class="wedding-list">
             <ul>
                 <li> Friday, April 26, 2024</li>
-                <li> The Wedding - 10:30 am</li>
-                <li> 5875 34B Avenue, Ladner, Delta, BC  <br> <br>
-                 <a  class="google" href="https://maps.app.goo.gl/WLLLbN1ic52n5fX99" target="_blank" rel="noopener"><img src="images/Google-Maps-logo (1).png" alt="googlem  maps" width="80px" class="maps"> </a>  </li>
-                <li> Dress Code: Semi Casual<br>
-                  Please try to avoid color Red 
+                <li> 10:00 am</li>
+                <li> 5875 34B Avenue, Ladner, Delta, BC 
+                 <a  class="google" href="https://maps.app.goo.gl/WLLLbN1ic52n5fX99" target="_blank" rel="noopener"><img src="images/Google-Maps-logo (1).png" alt="googlem  maps" width="50px" class="maps"> </a>  </li>
+                <li> Dress Code: Semi Formal<br>
+                  Please avoid the color Red 
                 </li> <br>
             </ul>
         </div>
@@ -317,9 +317,9 @@
          <div class="reception-list">
                 <ul>
                     <li> Saturday, April 27, 2024</li>
-                    <li> The Reception - 6:00 pm</li>
-                    <li>  Southall Banquet Hall <br> 8273 Ross Street,Vancouver,BC <br> <br>
-                      <a class="google" href="https://maps.app.goo.gl/2yBywK1aTE42VH918" target="_blank" rel="noopener"><img src="images/Google-Maps-logo (1).png" alt="googlem  maps" width="80px" class="maps"> </a> </li>
+                    <li> 6:00 pm</li>
+                    <li> Southall Banquet Hall <br> 8273 Ross Street,Vancouver,  BC 
+                      <a class="google" href="https://maps.app.goo.gl/2yBywK1aTE42VH918" target="_blank" rel="noopener"><img src="images/Google-Maps-logo (1).png" alt="googlem  maps" width="50px" class="maps"> </a> </li>
                     <li> Dress Code: Glam up !</li> <br> <br>
                 </ul>
             </div>
@@ -330,9 +330,17 @@
 
 <section class="part-five">
 <div class="rsvp-section">
- <!-- <div class=" mehndi-rsvp btn btn-link "><a href="https://docs.google.com/forms/d/e/1FAIpQLSeMto8L0gQoaZeFA-eN7PpYICK6DNey1M9S6ZXDCBvcIJJLWQ/viewform?usp=sf_link"> Mehndi RSVP </a></div> -->
- <div class=" wedding-rsvp btn btn-link "><a href="https://docs.google.com/forms/d/e/1FAIpQLSfoWcKxtQR6chQPOyCGNAvyY3gqku_uWEC2RfEn07PjcRcmqg/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer"> R&nbsp; S&nbsp; V&nbsp; P&nbsp;  </a></div>
- <!-- <div class=" reception-rsvp btn btn-link"><a href="https://docs.google.com/forms/d/e/1FAIpQLScwfjHB3f0MHYdC6snYL5m86Q8TasupfpqFu7twsYddwfypxg/viewform?usp=sf_link"> Reception RSVP </a></div> -->
+  <div class=" wedding-rsvp btn btn-link "><a href="https://docs.google.com/forms/d/e/1FAIpQLSfoWcKxtQR6chQPOyCGNAvyY3gqku_uWEC2RfEn07PjcRcmqg/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer"> R&nbsp; S&nbsp; V&nbsp; P&nbsp;  </a></div>
+</div>
+</section>
+<section class="hotels">
+<div class="hotel-names">
+ <h1> Places to stay</h1>
+</div>
+<div class="actual-hotels">
+<p> <a href="https://www.google.com/travel/search?q=delta%20hotels%20by%20marriott&g2lb=2502548%2C2503771%2C2503781%2C2504511%2C4258168%2C4284970%2C4291517%2C4814050%2C4874190%2C4893075%2C4965990%2C10208620%2C72277293%2C72302247%2C72317059%2C72379801%2C72406588%2C72414905%2C72421566%2C72430562%2C72440517%2C72448541%2C72453202%2C72458060%2C72458707%2C72462234%2C72469155%2C72470440%2C72470899%2C72472051%2C72473738%2C72473841%2C72479991%2C72480010%2C72484736%2C72485655%2C72486593&hl=en-CA&gl=ca&ssta=1&ts=CAESCAoCCAMKAggDGhwSGhIUCgcI6A8QAhgSEgcI6A8QAhgTGAEyAhAAKgwKCjoDQ0FEQgMImQE&qs=CAEyE0Nnb0kwc1dhbXJhanh1b1ZFQUU4C0IJCctDcSyOA0bhQgkJ0qJGYxsZ1RVCCQm3PyBmG8MCWA&ap=aAG6AQhvdmVydmlldw&ictx=1&ved=0CAAQ5JsGahcKEwjQ7ZDewICEAxUAAAAAHQAAAAAQBw&utm_campaign=sharing&utm_medium=link_btn&utm_source=htls" target="_blank" rel="noopener noreferrer"> Delta Hotels by Marriott </a> &#10004</p> <br>
+<p><a href="https://www.sandmanhotels.com/signature-vancouver-airport?utm_source=google&utm_medium=maps&utm_campaign=signature_vancouver_airport" target="_blank" rel="noopener noreferrer"> Sandman Signature Vancouver Airport Hotel & Resort</a> &#10004</p> <br>
+<p><a href="https://www.google.com/travel/search?q=holiday%20inn%20express%20delta%20bc&g2lb=2502548%2C2503771%2C2503781%2C2504511%2C4258168%2C4284970%2C4291517%2C4814050%2C4874190%2C4893075%2C4965990%2C10208620%2C72277293%2C72302247%2C72317059%2C72379801%2C72406588%2C72414905%2C72421566%2C72430562%2C72440517%2C72448541%2C72453202%2C72458060%2C72458707%2C72462234%2C72469155%2C72470440%2C72470899%2C72472051%2C72473738%2C72473841%2C72479991%2C72480010%2C72484736%2C72485655%2C72486593&hl=en-CA&gl=ca&ssta=1&ts=CAESCAoCCAMKAggDGhwSGhIUCgcI6A8QAhgSEgcI6A8QAhgTGAEyAhAAKgsKCToDQ0FEQgIIOA&qs=CAEyE0Nnb0lzZHFqb042Y2tjNW1FQUU4C0IJCTHtCOTlRJxmQgkJdE-QVpJXb71CCQkANzCMACzcng&ap=aAG6AQhvdmVydmlldw&ictx=1&ved=0CAAQ5JsGahcKEwjQwMnKwoCEAxUAAAAAHQAAAAAQCw&utm_campaign=sharing&utm_medium=link_btn&utm_source=htls" target="_blank" rel="noopener noreferrer"> Holiday Inn Express</a> &#10004</p> <br>
 </div>
 </section>
 <section 
