--- a/traditions.html
+++ b/traditions.html
@@ -14,8 +14,8 @@
     <header class="main">
              <!-- <img src="images/rsvp-image.jpg" alt="leafs" width ="100%">  -->
              <div class="main-heading">
-                <h1 class="slide-left"> Mellica & Morgan </h1> 
-                <h3 class="slide-right"> Are getting married </h3>
+                <h1 class="slide-left"> Indian </h1> 
+                <h3 class="slide-right"> Wedding Traditions </h3>
             </div>
        <nav class="main-nav">
         <ul>
@@ -35,7 +35,7 @@
     <div class="head-top"> 
     
     <section class="tradition">
-      <h1 class="head-one">Indian Wedding Tradition</h1>
+      <!-- <h1 class="head-one">Indian Wedding Tradition</h1> -->
         <p>
             <strong class="points">Mehndi: </strong>The Mehndi Party is a pre-wedding event in which the bride has mehndi, or henna, applied on
             her hands and feet. Mehndi comes from a plant that has cooling and medicinal properties.
