--- a/index.html
+++ b/index.html
@@ -467,11 +467,11 @@
 <p><a href="https://www.sandmanhotels.com/signature-vancouver-airport?utm_source=google&utm_medium=maps&utm_campaign=signature_vancouver_airport" target="_blank" rel="noopener noreferrer"> Sandman Signature Vancouver Airport Hotel & Resort</a> &#10004</p> <br>
 <p><a href="https://www.google.com/travel/search?q=holiday%20inn%20express%20delta%20bc&g2lb=2502548%2C2503771%2C2503781%2C2504511%2C4258168%2C4284970%2C4291517%2C4814050%2C4874190%2C4893075%2C4965990%2C10208620%2C72277293%2C72302247%2C72317059%2C72379801%2C72406588%2C72414905%2C72421566%2C72430562%2C72440517%2C72448541%2C72453202%2C72458060%2C72458707%2C72462234%2C72469155%2C72470440%2C72470899%2C72472051%2C72473738%2C72473841%2C72479991%2C72480010%2C72484736%2C72485655%2C72486593&hl=en-CA&gl=ca&ssta=1&ts=CAESCAoCCAMKAggDGhwSGhIUCgcI6A8QAhgSEgcI6A8QAhgTGAEyAhAAKgsKCToDQ0FEQgIIOA&qs=CAEyE0Nnb0lzZHFqb042Y2tjNW1FQUU4C0IJCTHtCOTlRJxmQgkJdE-QVpJXb71CCQkANzCMACzcng&ap=aAG6AQhvdmVydmlldw&ictx=1&ved=0CAAQ5JsGahcKEwjQwMnKwoCEAxUAAAAAHQAAAAAQCw&utm_campaign=sharing&utm_medium=link_btn&utm_source=htls" target="_blank" rel="noopener noreferrer"> Holiday Inn Express</a> &#10004</p> <br>
 </div>
-</section>
+</section>-->
 <div class="test">
   <a href="https://www.myregistry.com/wedding-registry/mellica-arya-and-morgan-schmidt-burnaby-bc/4096102/giftlist" class="btn btn-link " target="_blank" rel="noopener noreferrer" >Wedding Registry </a>
   </div>
-<section>  -->
+<section>  
 <div class="fire-video">
     <video src="images/fire.mp4" autoplay muted loop width="100%"></video>
 </div>
