--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             <li> Dress Code: Semi Casual</li> <br> <br>
         </ul>
     </div>         <p class="mehndi-detail">
- A semi casual cocktail style party while women get their<br>  mehndi applied. Please feel free to come and go as desired.
+ A semi casual cocktail style party while women get their  mehndi applied. Please feel free to come and go as desired.
  </p>
  <div class="meh-img"><img src="images/henstock.jpg" alt="wedding-rings" width="80%"></div>  
  </section>
