--- a/traditions.html
+++ b/traditions.html
@@ -13,10 +13,10 @@
     
     <header class="main">
              <!-- <img src="images/rsvp-image.jpg" alt="leafs" width ="100%">  -->
-             <div class="main-heading">
+             <!-- <div class="main-heading">
                 <h1 class="slide-left"> Indian </h1> 
                 <h3 class="slide-right"> Wedding Traditions </h3>
-            </div>
+            </div> -->
        <nav class="main-nav">
         <ul>
             <li><a href="index.html" target="_blank" rel="noopener noreferrer">Home</a>
@@ -31,6 +31,10 @@
     </header>
      <div class="video">
     <video src="images/wedding.mp4" width="100%" autoplay loop muted ></video>
+    <div class="main-heading">
+        <h1 class="slide-left"> Indian </h1> 
+        <h3 class="slide-right"> Wedding Traditions </h3>
+    </div>
 </div> 
     <div class="head-top"> 
     
