--- a/index.html
+++ b/index.html
@@ -371,9 +371,11 @@
     <!-- <div class="tab-one "> Function One</div> -->
 <div class="mehndi">
 <h2 class="mehndi-invite">
-    Mehndi  <br> <span class="sub-head"> (Henna Party) </span>
-</h2>
-
+    Mehndi  </h2>
+</div>
+<div class ="sub-head"
+ class="sub-head"> (Henna Party) 
+</div>
  <div class="mehndi-list">
         <ul>
             <li> Wednesday, April 24, 2024</li>
@@ -383,7 +385,7 @@
             
             <li> Dress Code: Semi Casual</li> <br> <br>
         </ul>
-    </div>         <p class="mehndi-detail">
+            <p class="mehndi-detail">
  A semi casual cocktail style party while women get their  mehndi applied. Please feel free to come and go as desired.
  </p>
  <div class="meh-img"><img src="images/henstock.jpg" alt="wedding-rings" width="100%"></div>  
@@ -395,20 +397,23 @@
     <!-- <div class="tab-two "> Function Two</div> -->
     <div class="wedding">
     <h2 class="wedding-invite">
-        Shaadi <br><span class="sub-head"> (Wedding Ceremony)</span>
-    </h2> <br> 
-  
+        Shaadi 
+    </h2>  
+  </div>
+<div class="sub-head1">
+  (Wedding Ceremony)
+</div>
      <div class="wedding-list">
             <ul>
                 <li> Friday, April 26, 2024</li>
                 <li> 10:00 am</li>
                 <li> 5875 34B Avenue, Ladner, Delta, BC 
                  <a  class="google" href="https://maps.app.goo.gl/WLLLbN1ic52n5fX99" target="_blank" rel="noopener"><img src="images/Google-Maps-logo (1).png" alt="googlem  maps" width="50px" class="maps"> </a>  </li>
-                <li> Dress Code: Semi Formal<br>
+                <li> Dress Code: Semi Formal <br>
                   Please avoid the color Red 
-                </li> <br>
+                </li> 
             </ul>
-        </div>
+        
             <p class="wedding-detail">
   
     After the Groom's family is welcomed to the venue, the pundit ( indian priest ) will perform the ceremony to bind the couple's lives together. Lunch will be served afterwards. Be advised this will be a phone free ceremony. Please put it away and enjoy the moment ! On this auspicious day , no alcohol will be served.  
