--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="main-nav">
             <ul>
                 
-                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfoWcKxtQR6chQPOyCGNAvyY3gqku_uWEC2RfEn07PjcRcmqg/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer">R&nbsp; S&nbsp; V&nbsp; P</a>
+                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScCFKMZrqTnAMdo0TQqA2dU0jXJfT7d1m74_HbW78xNLZBGKA/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer">R&nbsp; S&nbsp; V&nbsp; P</a>
                 <!-- <div class="sub-list">                        
                     <ul>
                         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeMto8L0gQoaZeFA-eN7PpYICK6DNey1M9S6ZXDCBvcIJJLWQ/viewform?usp=sf_link">Mehndi RSVP</a></li> 
@@ -46,7 +46,7 @@
 <section class="said-yes">
  <div class="accept">
     <h2 class="heading-two"> She Said Yes</h2>
-    <p class="yes-para">From meeting at the most romantic of locations ( a film set), fast forward four years to our first town house in Burnaby, two ginger cats, and the next adventure- our wedding ! Please join us for three fun filled days as we engage in the Indian traditions of marriage that will bind us for life.</p>
+    <p class="yes-para">From meeting at the most romantic of locations ( a film set), fast forward four years to our first town house in Burnaby, two ginger cats, and the next adventure-our wedding ! Please join us for three fun filled days as we engage in the Indian traditions of marriage that will bind us for life.</p>
  </div>
 </section>
 <div class="slider">
@@ -416,7 +416,7 @@
         
             <p class="wedding-detail">
   
-    After the Groom's family is welcomed to the venue, the pundit ( indian priest ) will perform the ceremony to bind the couple's lives together. Lunch will be served afterwards. Be advised this will be a phone free ceremony. Please put it away and enjoy the moment ! On this auspicious day , no alcohol will be served.  
+    After the two families meet and have lunch, a pundit(Indian priest) will perform the ceremony to marry the bride and groom. Please be advised this will be a phone free ceremony. On this auspicious day , no alcohol will be served.  
    
     </p> 
     <div class="wed-img"><img src="images/knotfxed.jpg" alt="wedding-rings" width="100%"></div> 
@@ -448,7 +448,7 @@
 
 <section class="part-five">
 <div class="rsvp-section">
-  <div class=" wedding-rsvp btn btn-link "><a href="https://docs.google.com/forms/d/e/1FAIpQLSfoWcKxtQR6chQPOyCGNAvyY3gqku_uWEC2RfEn07PjcRcmqg/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer"> R&nbsp; S&nbsp; V&nbsp; P&nbsp;  </a>
+  <div class=" wedding-rsvp btn btn-link "><a href="https://docs.google.com/forms/d/e/1FAIpQLScCFKMZrqTnAMdo0TQqA2dU0jXJfT7d1m74_HbW78xNLZBGKA/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer"> R&nbsp; S&nbsp; V&nbsp; P&nbsp;  </a>
      </div>
      <div class="hotel"> Places to stay </div>
      <div class="actual-hotel">
