--- a/traditions.html
+++ b/traditions.html
@@ -41,9 +41,9 @@
     <section class="tradition">
       <!-- <h1 class="head-one">Indian Wedding Tradition</h1> -->
         <p>
-            <strong class="points">Mehndi: </strong>The Mehndi Party is a pre-wedding event in which the bride has mehndi, or henna, applied on
+            <strong class="points">Mehndi: </strong>The Mehndi party is a pre-wedding event in which the bride has mehndi, or henna, applied on
             her hands and feet. Mehndi comes from a plant that has cooling and medicinal properties.
-            Henna has been used for almost more than 9000 years in many different contexts. Henna is
+            Henna has been used for around 9000 years in many different contexts. Henna is
             said to have originated from Egypt, where it was used as an ingredient for perfume, cosmetics,
             and for customary rituals. In India, the use of henna oils/perfumes is first mentioned in texts from
             6th century AD. People from warmer climates, such as the Indian subcontinent, Africa, and the
@@ -62,7 +62,7 @@
             of family members, groomsmen, and friends dance their way towards the wedding. This is a
             ceremony designed to welcome the groom and his family to the wedding location while the bride
             watches from afar. <br> <br>
-             <strong class="points">Milni: </strong>After the Baraat, the bride’s closest relatives welcome him by sprinkling rose water. In descending order of age, the male family members from the bride’s side of the family welcome the male family members from the groom’s side. This begins with the grandfathers, fathers, and then uncles and brothers. Because both families may not be perfectly balanced, cousins and other relatives may fill in spaces as needed. <br> <br>
+             <strong class="points">Milni: </strong>After the Baraat, the bride’s closest relatives welcome the groom by sprinkling rose water on him. In descending order of age, the male family members from the bride’s side of the family welcome the male family members from the groom’s side. This begins with the grandfathers, fathers, and then uncles and brothers. Because both families may not be perfectly balanced, cousins and other relatives may fill in spaces as needed. <br> <br>
             <strong class="points">Ganesh Puja:</strong> Once the groom reaches the Mandap (the alter), the priest will invoke the
             blessing of Lord Ganesh. This ceremony is performed to bestow good luck upon the couple and
             their families, seeking to ward off any obstacles that might get in the way as the couple begins
