--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 </section>
 <section class=" part-six wed-traditions">
   <div class="wed-trad">
-    <div class="  lets-see  btn btn-link "><a href="#" target="_blank" rel="noopener noreferrer"> Indian wedding  traditions  </a>
+    <div class="  lets-see  btn btn-link "><a href="traditions.html" target="_blank" rel="noopener noreferrer"> Indian wedding  traditions  </a>
     </div>
   </div>
   
