--- a/index.html
+++ b/index.html
@@ -450,7 +450,9 @@
          </section>
 
 <section class="part-five">
+  <p class="rsvp-by"> Please rsvp by March 20,2024.</p>
 <div class="rsvp-section">
+  <!-- <p><span class="rsvp-by">Please rsvp by March 20,2024.</span></p> -->
   <div class=" wedding-rsvp btn btn-link "><a href="https://docs.google.com/forms/d/e/1FAIpQLScCFKMZrqTnAMdo0TQqA2dU0jXJfT7d1m74_HbW78xNLZBGKA/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer"> R&nbsp; S&nbsp; V&nbsp; P&nbsp;  </a>
      </div>
      <div class="hotel"> Places to stay </div>
