--- a/index.html
+++ b/index.html
@@ -412,8 +412,8 @@
                 <li> 10:00 am</li>
                 <li> 5875 34B Avenue, Ladner, Delta, BC 
                  <a  class="google" href="https://maps.app.goo.gl/WLLLbN1ic52n5fX99" target="_blank" rel="noopener"><img src="images/Google-Maps-logo (1).png" alt="googlem  maps" width="50px" class="maps"> </a>  </li>
-                <li> Dress Code: Semi Formal <br>
-                  Please avoid the color RED 
+                <li> Dress Code: Formal <br>
+                  Please avoid the color Red 
                 </li> 
             </ul>
         
@@ -444,13 +444,13 @@
                 </ul>
             </div>
                 <p class="reception-detail">
-                    Food, games, entertainment, and minimal speaches...let's Celebrate! 
+                    Food, games, entertainment, and minimal speeches...let's celebrate! 
         </p> 
         <div class="rec-img"><img src="images/fooljhadifixed.jpg" alt="wedding-rings" width="100%"></div> 
          </section>
 
 <section class="part-five">
-  <p class="rsvp-by"> Please rsvp by March 20,2024.</p>
+  <p class="rsvp-by"> Please RSVP by March 20, 2024.</p>
 <div class="rsvp-section">
   <!-- <p><span class="rsvp-by">Please rsvp by March 20,2024.</span></p> -->
   <div class=" wedding-rsvp btn btn-link "><a href="https://docs.google.com/forms/d/e/1FAIpQLScCFKMZrqTnAMdo0TQqA2dU0jXJfT7d1m74_HbW78xNLZBGKA/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer"> R&nbsp; S&nbsp; V&nbsp; P&nbsp;  </a>
