--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <section class="said-yes">
  <div class="accept">
     <h2 class="heading-two"> She Said Yes</h2>
-    <p class="yes-para">From meeting at the most romantic of locations (a film set), fast forward four years to our first town house in Burnaby, two ginger cats, and the next adventure- our wedding ! Please join us for three fun filled days as we engage in the Indian traditions of marriage that will bind us for life.</p>
+    <p class="yes-para">From meeting at the most romantic of locations (a film set), fast forward four years to our first town house in Burnaby, two ginger cats, and the next adventure - our wedding ! Please join us for three fun-filled days as we engage in the Indian traditions of marriage that will bind us for life.</p>
  </div>
 </section>
 <div class="slider">
@@ -419,7 +419,7 @@
         
             <p class="wedding-detail">
   
-    After the two families meet and have lunch, a pundit (Indian priest) will perform the ceremony to marry the bride and groom. Please be advised this will be a phone free ceremony. On this auspicious day, no alcohol will be served.  
+    After the two families meet and have lunch, a pundit (Indian priest) will perform the ceremony to marry the bride and groom. Please be advised this will be a phone free ceremony. On this auspicious occassion, no alcohol will be served.  
    
     </p> 
     <div class="wed-img"><img src="images/knotfxed.jpg" alt="wedding-rings" width="100%"></div> 
@@ -444,7 +444,7 @@
                 </ul>
             </div>
                 <p class="reception-detail">
-                    Food, games, entertainment, and minimal speeches...let's celebrate! 
+                    Food, Games, Entertainment, and minimal speeches...Let's Celebrate! 
         </p> 
         <div class="rec-img"><img src="images/fooljhadifixed.jpg" alt="wedding-rings" width="100%"></div> 
          </section>
