--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                 <li> 5875 34B Avenue, Ladner, Delta, BC 
                  <a  class="google" href="https://maps.app.goo.gl/WLLLbN1ic52n5fX99" target="_blank" rel="noopener"><img src="images/Google-Maps-logo (1).png" alt="googlem  maps" width="50px" class="maps"> </a>  </li>
                 <li> Dress Code: Formal <br>
-                  Please avoid the color Red 
+                  Please avoid the color red 
                 </li> 
             </ul>
         
@@ -444,7 +444,7 @@
                 </ul>
             </div>
                 <p class="reception-detail">
-                    Food, Games, Entertainment, and minimal speeches...let's celebrate! 
+                    Food, games, entertainment, and minimal speeches...let's celebrate! 
         </p> 
         <div class="rec-img"><img src="images/fooljhadifixed.jpg" alt="wedding-rings" width="100%"></div> 
          </section>
